Refactored two guards to isValidTweet. Fixed tweet text to word-wrap within the tweet article

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -61,4 +61,5 @@
 
 .tweet p {
   padding: 10px 10px;
+  word-break: break-all;
 }
